--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -87,3 +87,29 @@
     height: 22px;
     filter: brightness(100%); /* white maintains visibility */
 }
+.social-btn {
+    padding: 12px;
+    border-radius: 8px;
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+    transition: 0.25s;
+}
+
+    .social-btn span {
+        margin-left: 5px;
+    }
+
+    .social-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+    }
+
+.facebook {
+    background-color: #1877F2;
+}
+
+    .facebook:hover {
+        background-color: #0d5edb;
+    }
