Forgate password with gmail

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -47,8 +47,6 @@
         </div>
 
         <!-- Facebook Login Button -->
-        <!-- Facebook Login Button -->
-        <!-- Facebook Login Button -->
         <div class="text-center mt-3">
             <a href="/Account/FacebookLogin" class="social-btn facebook w-100 d-flex align-items-center justify-content-center gap-2">
                 <img src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" width="22" height="22" alt="Facebook" />
@@ -62,6 +60,11 @@
         <div class="text-center mt-3">
             Don't have an account?
             <a asp-controller="Account" asp-action="Register" class="auth-link">Register</a>
+        </div>
+        <div class="text-center mt-3">
+            <a asp-controller="Account" asp-action="ForgotPassword" class="auth-link">
+                Forgot Password?
+            </a>
         </div>
 
     </div>
