Complete forgate password

--- a/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Password Reset Successful";
     ViewData["AuthPage"] = true;
+    ViewData["FullScreen"] = true;   /* 🔥 Makes Background Full Like Login Page */
 }
 
 <link rel="stylesheet" href="~/css/login.css" />
