--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,41 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<!-- ===== FULL WIDTH SLIDER ===== -->
+<div id="cssSlider" class="carousel slide" data-bs-ride="carousel">
+
+    <!-- Indicators -->
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#cssSlider" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#cssSlider" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#cssSlider" data-bs-slide-to="2"></button>
+    </div>
+
+    <!-- Slides -->
+    <div class="carousel-inner">
+
+        <div class="carousel-item active">
+            <img src="/images/slider/slide1.jpg" class="css-slide-img" />
+        </div>
+
+        <div class="carousel-item">
+            <img src="/images/slider/slide2.jpg" class="css-slide-img" />
+        </div>
+
+        <div class="carousel-item">
+            <img src="/images/slider/slide3.jpg" class="css-slide-img" />
+        </div>
+
+    </div>
+
+    <!-- Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#cssSlider" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#cssSlider" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
+
 </div>
